--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/purifycssinlined/purifycssinliner.git"
+    "url": "https://github.com/timspro/purify-css-inliner.git"
   },
   "keywords": [
     "optimize",
@@ -29,10 +29,10 @@
   "author": "Tim Sprowl",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/purifycss/purifycssinlined/issues"
+    "url": "https://github.com/timspro/purify-css-inliner/issues"
   },
   "bin": {
-    "purifycss": "./bin/purifycss"
+    "purifycssinliner": "./bin/purifycssinliner"
   },
-  "homepage": "https://github.com/purifycss/purifycssinliner"
+  "homepage": "https://github.com/timspro/purify-css-inliner"
 }
